@@ -4,11 +4,14 @@ import lombok.Getter;
 import lombok.RequiredArgsConstructor;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 
-import java.util.Collections;
 import java.util.List;
 import java.util.Set;
 import java.util.stream.Collectors;
 
+import static com.app.billingsystem.models.enums.Permission.USER_CREATE;
+import static com.app.billingsystem.models.enums.Permission.USER_DELETE;
+import static com.app.billingsystem.models.enums.Permission.USER_READ;
+import static com.app.billingsystem.models.enums.Permission.USER_UPDATE;
 import static com.app.billingsystem.models.enums.Permission.ADMIN_CREATE;
 import static com.app.billingsystem.models.enums.Permission.ADMIN_DELETE;
 import static com.app.billingsystem.models.enums.Permission.ADMIN_READ;
@@ -22,7 +25,14 @@ import static com.app.billingsystem.models.enums.Permission.MANAGER_UPDATE;
 public enum Role {
 
     // user has no permissions
-    USER(Collections.emptySet()),
+    USER(
+            Set.of(
+                    USER_READ,
+                    USER_UPDATE,
+                    USER_DELETE,
+                    USER_CREATE
+            )
+    ),
 
     // admin has all permissions
     ADMIN(
@@ -46,9 +56,7 @@ public enum Role {
                     MANAGER_DELETE,
                     MANAGER_CREATE
             )
-    )
-
-    ;
+    );
 
     @Getter
     private final Set<Permission> permissions;
